# kubeegg

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/kubeegg/: api.py  cli.py  egg.py  fetch.py  kustomize.py  models.py  prompts.py  render.py  util.py
tests/: test_api.py  test_egg.py  test_fetch.py  test_render.py  test_startup_vars.py
